# MergeSort

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake.yml
benchmark/: CMakeLists.txt  MergeSortBenchmark.cpp
build_release/benchmark/: benchmark
include/: MergeSort.hpp
tests/: CMakeLists.txt  MergeSortTests.cpp  QuickSortTests.cpp
